--- a/views/chapter.ejs
+++ b/views/chapter.ejs
@@ -26,8 +26,12 @@
           <% }); %>
         </select>
     </div>
-    <div>
+    <div class="flex items-center gap-2">
       <button class="px-3 py-2 rounded bg-brand hover:bg-indigo-500 text-white" id="fullscreen-button">Fullscreen</button>
+      <button class="px-3 py-2 rounded bg-surface2 hover:bg-surface" id="mode-long">Long</button>
+      <button class="px-3 py-2 rounded bg-surface2 hover:bg-surface" id="mode-single">Single</button>
+      <button class="px-3 py-2 rounded bg-surface2 hover:bg-surface" id="fit-width">Fit Width</button>
+      <button class="px-3 py-2 rounded bg-surface2 hover:bg-surface" id="fit-height">Fit Height</button>
     </div>
     <div>
       <% if (nextChapter) { %>
@@ -125,3 +129,12 @@
 </button>
 
 <script src="/js/chapter.js"></script>
+<script type="application/ld+json">
+  <%- JSON.stringify({
+    '@context': 'https://schema.org',
+    '@type': 'Chapter',
+    name: chapter.title,
+    isPartOf: { '@type':'Book', name: manga.title, url: '/manga/'+manga.slug },
+    url: '/manga/'+manga.slug+'/'+chapter.slug
+  }) %>
+</script>
